Fix the right edge of graphs getting cut off on mobile.
Some padding, and possible clipping during graph render, was causing
today's information to get cut off in some cases on mobile. This was
noticeable today when the death count increased.

That padding has now been removed, and clipping has been turned off,
just in case.

--- a/src/css/dashboard.less
+++ b/src/css/dashboard.less
@@ -546,7 +546,7 @@ a:visited {
 
     .bb {
       padding-left: 0;
-      padding-right: 1em;
+      padding-right: 0;
     }
   }
 }
